--- a/Assignment_2.iframes.html
+++ b/Assignment_2.iframes.html
@@ -20,13 +20,13 @@
         <tr>
           <td style="width: 600px; height: 400px">
             <center>
-              CV<br /><iframe src="CV.html" frameborder="2px">CV</iframe>
+              CV<br /><iframe src="CV_1.html" frameborder="2px">CV</iframe>
             </center>
           </td>
           <td style="width: 600px; height: 400px">
             <center>
-              <iframe src="Assignment2_Table.html" frameborder="2px"></iframe>
-              <br /><br /><a href="Assignment2_Table.html" target="_blank"
+              <iframe src="assignment_2.html" frameborder="2px"></iframe>
+              <br /><br /><a href="assignment_2.html" target="_blank"
                 >View full screen</a
               >
             </center>
